After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755969 - gtkglsink: Assertion in gst-inspect-1.0
gtkglsink: Assertion in gst-inspect-1.0
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal blocker
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-02 07:32 UTC by Sebastian Dröge (slomo)
Modified: 2015-10-19 00:57 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2015-10-02 07:32:41 UTC
+++ This bug was initially created as a clone of Bug #755249 +++

See https://bugzilla.gnome.org/show_bug.cgi?id=755249#c11


doing a "gst-inspect-1.0 gtksink" will cause a segfault because it enters the g_assert_no_reached() code
Comment 1 Matthew Waters (ystreet00) 2015-10-19 00:57:44 UTC
commit cfff5d819e861e22ee44b31a1252156de3043715
Author: Matthew Waters <matthew@centricular.com>
Date:   Sat Oct 17 02:40:50 2015 +1100

    gtk: separate out the widget/window destroy callbacks
    
    Fixes assertion due to the sink_finalize() being run before the widget destroy
    callback.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755969

and 1.6 903691f3888526f240915fa124845a528e85c1b7